--- a/settings.ini
+++ b/settings.ini
@@ -38,7 +38,7 @@ status = 3
 user = fligt
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = numpy matplotlib opencv-python scipy imageio
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
